# iso10383

./: .markdownlint-cli2.jsonc  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
.devcontainer/: devcontainer.json  post-attach.sh  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release-plz.yml
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: lib.rs  xml.rs
macros/src/xml/: recordset.rs
parser/: CHANGELOG.md  Cargo.toml  README.md
parser/src/: lib.rs
parser/tests/: 2025-02-10.xml  2025-03-10.xml  2025-05-12.xml  2025-06-10.xml  2025-08-11.xml  2025-09-08.xml  2025-10-13.xml  2025-11-14.xml  2025-12-08.xml  2026-01-12.xml  all.rs
src/: lib.rs
static/: CHANGELOG.md  Cargo.toml  README.md
static/src/: _serde.rs  lib.rs
types/: CHANGELOG.md  Cargo.toml  README.md
types/src/: alloc_.rs  lib.rs  serde_.rs
