[workspace]
resolver = "2"
members = ["parser", "types"]
exclude = [".cache"]

[workspace.dependencies]
chrono = { version = "0.4", default-features = false }
iso17442-types = { version = "0.3", default-features = false }
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1", default-features = false }

[workspace.lints.clippy]
cargo = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
rust_2018_idioms = "deny"
unsafe_code = "deny"


[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"

[workspace.package]
authors = ["James Cape <jamescape777@gmail.com>"]
edition = "2021"
homepage = "https://github.com/jcape/iso10383"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jcape/iso10383"
rust-version = "1.92.0"
version = "0.3.1"

[profile.release]
lto = true
