[workspace]
resolver = "2"
members = ["macros", "parser", "static", "types"]
exclude = [".cache"]

[workspace.dependencies]
chrono = { version = "0.4.20", default-features = false }
iso3166-static = { version = "0.4.0", default-features = false }
iso10383-macros = { version = "=0.3.3", path = "./macros" }
iso10383-parser = { version = "=0.3.3", path = "./parser" }
iso10383-static = { version = "=0.3.3", path = "./static" }
iso10383-types = { version = "=0.3.3", path = "./types" }
iso17442-types = { version = "0.3", default-features = false }
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1", default-features = false }
serde_json = "1"

[workspace.lints.clippy]
cargo = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
rust_2018_idioms = "deny"
unsafe_code = "deny"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"

[workspace.package]
authors = ["James Cape <jamescape777@gmail.com>"]
edition = "2024"
homepage = "https://github.com/jcape/iso10383"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jcape/iso10383"
rust-version = "1.92.0"
version = "0.3.3"

[profile.release]
lto = true
