[workspace]
resolver = "2"
members = ["macros", "parser", "static", "types"]
exclude = [".cache"]

[workspace.dependencies]
chrono = { version = "0.4.20", default-features = false }
iso3166-static = { version = "0.4.0", default-features = false }
iso10383-macros = { version = "=0.4.1", path = "./macros" }
iso10383-parser = { version = "=0.4.1", path = "./parser" }
iso10383-static = { version = "=0.4.1", path = "./static" }
iso10383-types = { version = "=0.4.1", path = "./types" }
iso17442-types = { version = "0.3", default-features = false }
quick-xml = { version = "0.39.0", features = ["serialize"] }
serde = { version = "1", default-features = false }
serde_json = "1"
zerocopy = { version = "0.8.21", default-features = false, features = [
    "derive",
] }

[workspace.lints.clippy]
cargo = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
almost_complete_range = "deny"
doc_paragraphs_missing_punctuation = "deny"
if_then_some_else_none = "deny"
infinite_loop = "deny"
let_underscore_must_use = "deny"
missing_docs_in_private_items = "deny"
missing_inline_in_public_items = "deny"
pathbuf_init_then_push = "deny"
print_stderr = "deny"
print_stdout = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unneeded_field_pattern = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
rust_2018_idioms = "deny"
unsafe_code = "deny"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"

[workspace.package]
authors = ["James Cape <jamescape777@gmail.com>"]
edition = "2024"
homepage = "https://github.com/jcape/iso10383"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jcape/iso10383"
rust-version = "1.88.0"
version = "0.4.1"

[profile.release]
lto = true
