[package]
name = "iso10383-macros"
description = "Code generation for ISO 10383 MIC Data"
edition = "2024"
authors.workspace = true
categories = ["finance", "localization"]
documentation = "https://docs.rs/iso10383-macros"
homepage.workspace = true
keywords = ["iso10383", "mic"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
chrono.workspace = true
heck = "0.5"
itertools = "0.14"
iso10383-parser.workspace = true
iso10383-types.workspace = true
iso17442-types.workspace = true
proc-macro2 = "1"
quick-xml.workspace = true
quote = "1"
serde = { workspace = true, features = ["std"] }
syn = { version = "2", features = ["full"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
