[package]
name = "iso10383-parser"
version.workspace = true
authors.workspace = true
description = "Parser for ISO 10383 XML Data"
documentation = "https://docs.rs/iso10383-parser"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std", "serde"] }
iso10383-types = { version = "=0.3.0", path = "../types", features = [
    "serde",
] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
yare = "3"
quick-xml.workspace = true

[lints]
workspace = true
