[package]
name = "iso10383-parser"
authors.workspace = true
categories = ["finance", "localization", "parser-implementations"]
description = "Parser for ISO 10383 XML Data"
documentation = "https://docs.rs/iso10383-parser"
edition.workspace = true
keywords = ["iso10383", "mic"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std", "serde"] }
iso3166-static = { workspace = true, features = ["serde", "alloc"] }
iso10383-types = { version = "=0.4.1", path = "../types", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
yare = "3"
quick-xml.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
