[package]
name = "iso10383-static"
version.workspace = true
authors.workspace = true
categories = ["finance", "localization", "no-std", "no-std::no-alloc"]
description = "Static ISO 10383 Data"
documentation = "https://docs.rs/iso10383-static"
edition.workspace = true
keywords = ["iso10383", "mic"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
iso3166-static.workspace = true
iso10383-macros.workspace = true
iso10383-types.workspace = true
iso17442-types.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["serde"]
alloc = [
    "serde?/alloc",
    "chrono/alloc",
    "iso3166-static/alloc",
    "iso10383-types/alloc",
    "iso17442-types/alloc",
]
serde = [
    "dep:serde",
    "chrono/serde",
    "iso3166-static/serde",
    "iso10383-types/serde",
    "iso17442-types/serde",
]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
