[package]
name = "iso10383-types"
authors.workspace = true
categories = ["finance", "localization", "no-std", "no-std::no-alloc"]
description = "ISO 10383 Types"
documentation = "https://docs.rs/iso10383-types"
edition.workspace = true
keywords = ["iso10383", "mic"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["alloc", "serde"]
alloc = ["serde?/alloc", "iso3166-static/alloc"]
serde = ["dep:serde", "iso3166-static/serde"]

[dependencies]
ref-cast = "1.0"
iso3166-static.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
serde_json.workspace = true

[package.metadata.docs.rs]
all-features = true
